--- a/src/sc5-styleguide/modifiers.sc5.scss
+++ b/src/sc5-styleguide/modifiers.sc5.scss
@@ -1,5 +1,5 @@
 /*
-Star Rating
+Modifiers
 
 A beautiful ui component for displaying rating values of up to 5 stars with css only.
 Options are:
@@ -33,7 +33,7 @@ Options are:
        <sg-wrapper-content/>
    </div>
 
-Styleguide 1.0
+Styleguide 2.0
 */
 
 /*
