--- a/src/sc5-styleguide/elements.sc5.scss
+++ b/src/sc5-styleguide/elements.sc5.scss
@@ -4,8 +4,30 @@ Elements
 The elements a css star rating component consists of.
 Her you can see the html structure and the combination of elements.
 
+sg-wrapper:
+<div class="phone-simulator padding">
+   <sg-wrapper-content/>
+</div>
+
 Styleguide 3.0
 */
+
+
+/*
+Star Element
+
+The Star element.
+
+markup:
+<div class="star icon filled positive large">
+  <i class="star-empty"></i>
+  <i class="star-half"></i>
+  <i class="star-filled"></i>
+</div>
+
+Styleguide 3.1
+*/
+
 
 /*
 Star fill states
@@ -30,7 +52,7 @@ markup:
   </svg>
 </div>
 
-Styleguide 3.1
+Styleguide 3.1.1
 */
 
 /*
@@ -44,7 +66,121 @@ The different star colors.
 .negative          - Stars is colored negative
 
 markup:
+<div class="star filled svg {$modifiers}">
+  <svg class="star-empty">
+      <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="assets/images/star-rating.icons.svg#star-empty"></use>
+  </svg>
+  <svg class="star-half">
+      <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="assets/images/star-rating.icons.svg#star-half"></use>
+  </svg>
+  <svg class="star-filled">
+      <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="assets/images/star-rating.icons.svg#star-filled"></use>
+  </svg>
+  <i class="star-empty fa fa-this-icon"></i>
+  <i class="star-half fa fa-half-icon"></i>
+  <i class="star-filled fa fa-that-icon"></i>
+</div>
+<div class="star filled icon {$modifiers}">
+  <svg class="star-empty">
+      <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="assets/images/star-rating.icons.svg#star-empty"></use>
+  </svg>
+  <svg class="star-half">
+      <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="assets/images/star-rating.icons.svg#star-half"></use>
+  </svg>
+  <svg class="star-filled">
+      <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="assets/images/star-rating.icons.svg#star-filled"></use>
+  </svg>
+  <i class="star-empty fa fa-this-icon"></i>
+  <i class="star-half fa fa-half-icon"></i>
+  <i class="star-filled fa fa-that-icon"></i>
+</div>
+<div class="star filled img {$modifiers}">
+  <svg class="star-empty">
+      <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="assets/images/star-rating.icons.svg#star-empty"></use>
+  </svg>
+  <svg class="star-half">
+      <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="assets/images/star-rating.icons.svg#star-half"></use>
+  </svg>
+  <svg class="star-filled">
+      <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="assets/images/star-rating.icons.svg#star-filled"></use>
+  </svg>
+  <i class="star-empty fa fa-this-icon"></i>
+  <i class="star-half fa fa-half-icon"></i>
+  <i class="star-filled fa fa-that-icon"></i>
+</div>
+
+
+Styleguide 3.1.2
+*/
+
+/*
+Star types
+
+The different star types.
+
+none          - Stars svg icon is used
+.svg          - Stars svg icon is used
+.icon         - Stars character icon is used
+
+markup:
+<div class="star empty {$modifiers}">
+  <svg class="star-empty">
+      <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="assets/images/star-rating.icons.svg#star-empty"></use>
+  </svg>
+  <svg class="star-half">
+      <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="assets/images/star-rating.icons.svg#star-half"></use>
+  </svg>
+  <svg class="star-filled">
+      <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="assets/images/star-rating.icons.svg#star-filled"></use>
+  </svg>
+  <i class="star-empty fa fa-this-icon"></i>
+  <i class="star-half fa fa-half-icon"></i>
+  <i class="star-filled fa fa-that-icon"></i>
+</div>
+<div class="star half {$modifiers}">
+  <svg class="star-empty">
+      <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="assets/images/star-rating.icons.svg#star-empty"></use>
+  </svg>
+  <svg class="star-half">
+      <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="assets/images/star-rating.icons.svg#star-half"></use>
+  </svg>
+  <svg class="star-filled">
+      <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="assets/images/star-rating.icons.svg#star-filled"></use>
+  </svg>
+  <i class="star-empty fa fa-this-icon"></i>
+  <i class="star-half fa fa-half-icon"></i>
+  <i class="star-filled fa fa-that-icon"></i>
+</div>
 <div class="star filled {$modifiers}">
+  <svg class="star-empty">
+      <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="assets/images/star-rating.icons.svg#star-empty"></use>
+  </svg>
+  <svg class="star-half">
+      <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="assets/images/star-rating.icons.svg#star-half"></use>
+  </svg>
+  <svg class="star-filled">
+      <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="assets/images/star-rating.icons.svg#star-filled"></use>
+  </svg>
+  <i class="star-empty fa fa-this-icon"></i>
+  <i class="star-half fa fa-half-icon"></i>
+  <i class="star-filled fa fa-that-icon"></i>
+</div>
+
+Styleguide 3.1.3
+*/
+
+/*
+Star sizes
+
+The Star sizes.
+
+none                    - displays star in default size (medium)
+.small                  - displays star in small size
+.medium                 - displays star in medium size
+.large                  - displays star in large size
+
+markup:
+<div class="star {$modifiers}">
   <svg class="star-empty">
       <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="assets/images/star-rating.icons.svg#star-empty"></use>
   </svg>
@@ -56,5 +192,204 @@ markup:
   </svg>
 </div>
 
+Styleguide 3.1.4
+*/
+
+/*
+Star Disabled state
+
+The Star element in disabled state.
+
+none                    - displays star in normal (medium)
+.disabled               - displays star in disabled state
+
+markup:
+<div class="star half positive {$modifiers}">
+  <svg class="star-empty">
+      <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="assets/images/star-rating.icons.svg#star-empty"></use>
+  </svg>
+  <svg class="star-half">
+      <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="assets/images/star-rating.icons.svg#star-half"></use>
+  </svg>
+  <svg class="star-filled">
+      <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="assets/images/star-rating.icons.svg#star-filled"></use>
+  </svg>
+</div>
+
+Styleguide 3.1.5
+*/
+
+/*
+The the direction of the star icon.
+
+none                    - displays star icon in left to right direction. (direction-ltr)
+.direction-rtl          - displays star icon in right to left direction.
+.direction-ltr          - displays star icon in left to right direction.
+
+markup:
+<div class="star half {$modifiers}">
+  <svg class="star-empty">
+      <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="assets/images/star-rating.icons.svg#star-empty"></use>
+  </svg>
+  <svg class="star-half">
+      <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="assets/images/star-rating.icons.svg#star-half"></use>
+  </svg>
+  <svg class="star-filled">
+      <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="assets/images/star-rating.icons.svg#star-filled"></use>
+  </svg>
+</div>
+
+Styleguide 3.1.6
+*/
+
+
+/*
+Label Element
+
+The Label element.
+
+markup:
+<div class="label-value">3.5</div>
+
 Styleguide 3.2
+*/
+
+
+/*
+Label Sizes
+
+The Label element.
+
+none                    - displays star in default size (medium)
+.small                  - displays star in small size
+.medium                 - displays star in medium size
+.large                  - displays star in large size
+
+markup:
+<div class="label-value {$modifiers}">3.5</div>
+
+Styleguide 3.2.1
+*/
+
+/*
+Label Disabled state
+
+The Label n disabled state.
+
+none                    - displays label in normal (medium)
+.disabled               - displays label in disabled state
+
+markup:
+<div class="label-value {$modifiers}">3.5</div>
+
+Styleguide 3.2.2
+*/
+
+/*
+Star Container
+
+The wrapper container for many stars.
+
+markup:
+<div class="star-container">
+  <div class="star icon filled positive large">
+    <i class="star-empty"></i>
+    <i class="star-half"></i>
+    <i class="star-filled"></i>
+  </div>
+  <div class="star icon half positive large">
+    <i class="star-empty"></i>
+    <i class="star-half"></i>
+    <i class="star-filled"></i>
+  </div>
+  <div class="star icon empty positive large">
+    <i class="star-empty"></i>
+    <i class="star-half"></i>
+    <i class="star-filled"></i>
+  </div>
+</div>
+
+Styleguide 3.3
+*/
+
+
+/*
+Container Direction
+
+The the direction of the star container.
+
+none                    - displays star in left to right direction. (direction-ltr)
+.direction-rtl          - displays star in right to left direction.
+.direction-ltr          - displays star in left to right direction.
+
+
+markup:
+<div class="star-container {$modifiers}">
+  <div class="star filled positive large">
+     <svg class="star-empty">
+        <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="assets/images/star-rating.icons.svg#star-empty"></use>
+    </svg>
+    <svg class="star-half">
+        <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="assets/images/star-rating.icons.svg#star-half"></use>
+    </svg>
+    <svg class="star-filled">
+        <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="assets/images/star-rating.icons.svg#star-filled"></use>
+    </svg>
+  </div>
+  <div class="star half positive large">
+   <svg class="star-empty">
+        <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="assets/images/star-rating.icons.svg#star-empty"></use>
+    </svg>
+    <svg class="star-half">
+        <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="assets/images/star-rating.icons.svg#star-half"></use>
+    </svg>
+    <svg class="star-filled">
+        <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="assets/images/star-rating.icons.svg#star-filled"></use>
+    </svg>
+  </div>
+  <div class="star empty positive large">
+   <svg class="star-empty">
+        <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="assets/images/star-rating.icons.svg#star-empty"></use>
+    </svg>
+    <svg class="star-half">
+        <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="assets/images/star-rating.icons.svg#star-half"></use>
+    </svg>
+    <svg class="star-filled">
+        <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="assets/images/star-rating.icons.svg#star-filled"></use>
+    </svg>
+  </div>
+</div>
+
+Styleguide 3.3.1
+*/
+
+/*
+Container stars spread
+
+The spacing between stars.
+
+none             - stars center im horizontal center.
+.spread          - stars take all available space to position.
+
+
+markup:
+<div class="star-container {$modifiers}">
+<div class="star icon filled positive large">
+  <i class="star-empty"></i>
+  <i class="star-half"></i>
+  <i class="star-filled"></i>
+</div>
+<div class="star icon half positive large">
+  <i class="star-empty"></i>
+  <i class="star-half"></i>
+  <i class="star-filled"></i>
+</div>
+<div class="star icon empty positive large">
+  <i class="star-empty"></i>
+  <i class="star-half"></i>
+  <i class="star-filled"></i>
+</div>
+</div>
+
+Styleguide 3.3.2
 */
