--- a/src/sc5-styleguide/modifiers.sc5.scss
+++ b/src/sc5-styleguide/modifiers.sc5.scss
@@ -15,11 +15,15 @@ Options are:
 
 
    markup:
-   <div ng-init="data.rating = 0" class="rating padding value-{{data.rating}}">
+   <div class="rating large direction-rtl value-3 half color-negative label-top">
+   <div class="label-value">3.5</div>
     <div class="star-container">
-        <div class="star" ng-repeat="i in [1,2,3,4,5] track by $index" ng-click="data.rating = $index+1">
+        <div class="star" ng-repeat="i in [1,2,3,4,5] track by $index">
             <svg class="star-empty">
                 <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="assets/images/star-rating.icons.svg#star-empty"></use>
+            </svg>
+             <svg class="star-half">
+                <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="assets/images/star-rating.icons.svg#star-half"></use>
             </svg>
             <svg class="star-filled">
                 <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="assets/images/star-rating.icons.svg#star-filled"></use>
@@ -28,12 +32,7 @@ Options are:
     </div>
   </div>
 
-   sg-wrapper:
-   <div class="phone-simulator padding">
-       <sg-wrapper-content/>
-   </div>
-
-Styleguide 2.0
+Styleguide 1.1
 */
 
 /*
@@ -68,7 +67,7 @@ markup:
 </div>
 
 
-Styleguide 1.1
+Styleguide 1.1.1
 */
 
 /*
@@ -100,7 +99,7 @@ markup:
     </div>
 </div>
 
-Styleguide 1.1.1
+Styleguide 1.1.1.1
 */
 
 /*
@@ -205,7 +204,7 @@ markup:
 </div>
 
 
-Styleguide 1.2
+Styleguide 1.1.2
 */
 
 /*
@@ -234,7 +233,7 @@ markup:
     </div>
 </div>
 
-Styleguide 1.3
+Styleguide 1.1.3
 */
 
 /*
@@ -259,7 +258,7 @@ markup:
     </div>
 </div>
 
-Styleguide 1.4
+Styleguide 1.1.4
 */
 
 /*
@@ -274,11 +273,14 @@ default                  - No static color
 .color-negative          - Stars are always colored negative
 
 markup:
-<div class="rating {$modifiers}">
+<div class="rating half value-0 {$modifiers}">
     <div class="star-container">
         <div class="star" ng-repeat="i in [1,2,3,4,5]">
             <svg class="star-empty">
                 <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="assets/images/star-rating.icons.svg#star-empty"></use>
+            </svg>
+            <svg class="star-half">
+                <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="assets/images/star-rating.icons.svg#star-half"></use>
             </svg>
             <svg class="star-filled">
                 <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="assets/images/star-rating.icons.svg#star-filled"></use>
@@ -286,11 +288,14 @@ markup:
         </div>
     </div>
 </div>
-<div class="rating value-1 {$modifiers}">
+<div class="rating value-1 half {$modifiers}">
     <div class="star-container">
         <div class="star" ng-repeat="i in [1,2,3,4,5]">
             <svg class="star-empty">
                 <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="assets/images/star-rating.icons.svg#star-empty"></use>
+            </svg>
+            <svg class="star-half">
+                <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="assets/images/star-rating.icons.svg#star-half"></use>
             </svg>
             <svg class="star-filled">
                 <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="assets/images/star-rating.icons.svg#star-filled"></use>
@@ -298,11 +303,14 @@ markup:
         </div>
     </div>
 </div>
-<div class="rating value-2 {$modifiers}">
+<div class="rating half value-2 {$modifiers}">
     <div class="star-container">
         <div class="star" ng-repeat="i in [1,2,3,4,5]">
             <svg class="star-empty">
                 <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="assets/images/star-rating.icons.svg#star-empty"></use>
+            </svg>
+            <svg class="star-half">
+                <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="assets/images/star-rating.icons.svg#star-half"></use>
             </svg>
             <svg class="star-filled">
                 <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="assets/images/star-rating.icons.svg#star-filled"></use>
@@ -310,11 +318,14 @@ markup:
         </div>
     </div>
 </div>
-<div class="rating value-3 {$modifiers}">
+<div class="rating half value-3 {$modifiers}">
     <div class="star-container">
         <div class="star" ng-repeat="i in [1,2,3,4,5]">
             <svg class="star-empty">
                 <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="assets/images/star-rating.icons.svg#star-empty"></use>
+            </svg>
+            <svg class="star-half">
+                <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="assets/images/star-rating.icons.svg#star-half"></use>
             </svg>
             <svg class="star-filled">
                 <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="assets/images/star-rating.icons.svg#star-filled"></use>
@@ -322,11 +333,14 @@ markup:
         </div>
     </div>
 </div>
-<div class="rating value-4 {$modifiers}">
+<div class="rating half value-4 {$modifiers}">
     <div class="star-container">
         <div class="star" ng-repeat="i in [1,2,3,4,5]">
             <svg class="star-empty">
                 <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="assets/images/star-rating.icons.svg#star-empty"></use>
+            </svg>
+            <svg class="star-half">
+                <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="assets/images/star-rating.icons.svg#star-half"></use>
             </svg>
             <svg class="star-filled">
                 <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="assets/images/star-rating.icons.svg#star-filled"></use>
@@ -340,6 +354,9 @@ markup:
             <svg class="star-empty">
                 <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="assets/images/star-rating.icons.svg#star-empty"></use>
             </svg>
+            <svg class="star-half">
+                <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="assets/images/star-rating.icons.svg#star-half"></use>
+            </svg>
             <svg class="star-filled">
                 <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="assets/images/star-rating.icons.svg#star-filled"></use>
             </svg>
@@ -348,7 +365,7 @@ markup:
 </div>
 
 
-Styleguide 1.5
+Styleguide 1.1.5
 */
 
 /*
@@ -364,7 +381,7 @@ Displays the rating value as text label.
 
 
 markup:
-<div class="rating padding {$modifiers}">
+<div class="rating  {$modifiers}">
     <div class="label-value">0</div>
     <div class="star-container">
         <div class="star" ng-repeat="i in [1,2,3,4,5]">
@@ -377,7 +394,7 @@ markup:
         </div>
     </div>
 </div>
-<div class="rating value-2 small padding {$modifiers}">
+<div class="rating value-2 small  {$modifiers}">
     <div class="label-value">(bad)</div>
     <div class="star-container">
         <div class="star" ng-repeat="i in [1,2,3,4,5]">
@@ -390,7 +407,7 @@ markup:
         </div>
     </div>
 </div>
-<div class="rating value-3 medium padding {$modifiers}">
+<div class="rating value-3 medium  {$modifiers}">
     <div class="label-value">3.1</div>
     <div class="star-container">
         <div class="star" ng-repeat="i in [1,2,3,4,5]">
@@ -403,7 +420,7 @@ markup:
         </div>
     </div>
 </div>
-<div class="rating value-4 large padding {$modifiers}">
+<div class="rating value-4 large  {$modifiers}">
     <div class="label-value">Good</div>
     <div class="star-container">
         <div class="star" ng-repeat="i in [1,2,3,4,5]">
@@ -417,7 +434,7 @@ markup:
     </div>
 </div>
 
-Styleguide 1.6
+Styleguide 1.1.6
 */
 
 /*
@@ -429,7 +446,7 @@ Styleguide 1.6
    .disabled                - Stars are grayed out, no interaction is possible
 
    markup:
-   <div class="rating padding {$modifiers}">
+   <div class="rating  {$modifiers}">
     <div class="star-container">
         <div class="star" ng-repeat="i in [1,2,3,4,5]">
             <svg class="star-empty">
@@ -441,7 +458,7 @@ Styleguide 1.6
         </div>
     </div>
 </div>
-<div class="rating value-2 small padding {$modifiers}">
+<div class="rating value-2 small  {$modifiers}">
     <div class="label-value">(bad)</div>
     <div class="star-container">
         <div class="star" ng-repeat="i in [1,2,3,4,5]">
@@ -454,7 +471,7 @@ Styleguide 1.6
         </div>
     </div>
 </div>
-<div class="rating value-3 medium padding {$modifiers}">
+<div class="rating value-3 medium  {$modifiers}">
     <div class="label-value">3.1</div>
     <div class="star-container">
         <div class="star" ng-repeat="i in [1,2,3,4,5]">
@@ -467,7 +484,7 @@ Styleguide 1.6
         </div>
     </div>
 </div>
-<div class="rating value-4 large padding {$modifiers}">
+<div class="rating value-4 large  {$modifiers}">
     <div class="label-value">Good</div>
     <div class="star-container">
         <div class="star" ng-repeat="i in [1,2,3,4,5]">
@@ -481,7 +498,7 @@ Styleguide 1.6
     </div>
 </div>
 
-   Styleguide 1.7
+   Styleguide 1.1.7
    */
 /*
    Animation Speed
@@ -494,7 +511,7 @@ Styleguide 1.6
    .slow                     - Transition runs very slow
 
    markup:
-   <div ng-init="data.rating = 1" class="rating padding value-{{data.rating}} {$modifiers}">
+   <div ng-init="data.rating = 1" class="rating  value-{{data.rating}} {$modifiers}">
     <div class="star-container">
         <div class="star" ng-repeat="i in [1,2,3,4,5] track by $index" ng-click="data.rating = (data.rating == 1)?5:1">
             <svg class="star-empty">
@@ -507,7 +524,7 @@ Styleguide 1.6
     </div>
   </div>
 
-   Styleguide 1.8
+   Styleguide 1.1.8
    */
 
 /*
@@ -520,7 +537,7 @@ Styleguide 1.6
    .star-svg                - Star-Vectors form the shipped svg images
 
    markup:
-  <div class="rating padding value-3 half {$modifiers}">
+  <div class="rating  value-3 half {$modifiers}">
     <div class="star-container">
         <div class="star" ng-repeat="i in [1,2,3,4,5] track by $index">
             <svg class="star-empty">
@@ -539,7 +556,7 @@ Styleguide 1.6
     </div>
   </div>
 
-   Styleguide 1.9
+   Styleguide 1.1.9
 */
 
 /*
@@ -553,7 +570,7 @@ Styleguide 1.6
 
 
    markup:
-  <div class="rating padding value-3 half {$modifiers}">
+  <div class="rating  value-3 half {$modifiers}">
     <div class="label-value">3.5</div>
     <div class="star-container">
         <div class="star" ng-repeat="i in [1,2,3,4,5] track by $index">
@@ -570,5 +587,5 @@ Styleguide 1.6
     </div>
   </div>
 
-   Styleguide 1.10
+   Styleguide 1.1.10
 */
