--- a/src/sc5-styleguide/elements.sc5.scss
+++ b/src/sc5-styleguide/elements.sc5.scss
@@ -69,7 +69,6 @@ markup:
 Styleguide 1.2.1
 */
 
-
 /*
 Star fill states
 
@@ -212,14 +211,14 @@ Styleguide 1.2.1.1.3
 */
 
 /*
-Star types
+Star icons
 
-The different star types.
+The different star icons.
 
 none                  - Stars svg icon is used
-.fa fa-star           -font-awesome star-icon
-.fa fa-heart          -bootstrat star-icon
-.fa fa-gear           -ionic star-icon
+.fa fa-star           - font-awesome star-icon
+.fa fa-heart          - bootstrap star-icon
+.fa fa-gear           - ionic star-icon
 
 markup:
 <div class="star filled custom-icon">
@@ -230,7 +229,6 @@ markup:
 
 Styleguide 1.2.1.1.3.1
 */
-
 
 /*
 Star sizes
@@ -302,9 +300,13 @@ markup:
   </svg>
 </div>
 
+sg-wrapper:
+<div class="phone-simulator padding">
+   <sg-wrapper-content/>
+</div>
+
 Styleguide 1.2.1.5
 */
-
 
 /*
 Star Container
@@ -332,7 +334,6 @@ markup:
 
 Styleguide 1.2.2
 */
-
 
 /*
 Container Direction
@@ -425,7 +426,6 @@ markup:
 
 Styleguide 1.2.3
 */
-
 
 /*
 Label Sizes
