--- a/src/scss/_elements.scss
+++ b/src/scss/_elements.scss
@@ -3,6 +3,15 @@
 /*CSS Star Rating Elements
 ====================================================*/
 
+/*HELPER*/
+
+.center-all{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+
 /*
 Star element
 ==================================================================*/
@@ -10,15 +19,16 @@ Star element
   position: relative;
   width: $default-star-width;
   height: $default-star-height;
+  @extend .center-all;
 
   svg, i {
+    @extend .center-all;
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
 
-    display: block;
     font-style: normal;
 
     &.star-half,
@@ -28,6 +38,7 @@ Star element
   }
 
   i {
+    top:1px;
     display: none;
   }
 
@@ -54,7 +65,7 @@ Star element
       content: $default-star-character-empty;
     }
     &.star-half:before {
-      content: $default-star-character-half
+      content: $default-star-character-half;
     }
     &.star-filled:before {
       content: $default-star-character-filled;
