feat(styleguide): updated styleguide

--- a/src/sc5-styleguide/modifiers.sc5.scss
+++ b/src/sc5-styleguide/modifiers.sc5.scss
@@ -32,6 +32,11 @@ Options are:
     </div>
   </div>
 
+   sg-wrapper:
+   <div class="phone-simulator padding">
+       <sg-wrapper-content/>
+   </div>
+
 Styleguide 1.1
 */
 
