--- a/src/sc5-styleguide/themes.scss
+++ b/src/sc5-styleguide/themes.scss
@@ -6,14 +6,15 @@ Some themes expect a special background to look good.
 For demo-purpos the theme-[name]-gb classes are created.
 
 default                 - default theme
+.theme-rolling-stars    - animate stars
 .theme-kununu           - kununu theme
 .theme-google-places    - google-places theme
 
    markup:
-   <div class="rating value-3 half {$modifiers}">
-   <div class="label-value">3,57</div>
+   <div ng-init="data.rating=3" class="rating value-{{data.rating}} half {$modifiers}" >
+   <div class="label-value">{{data.rating}},57</div>
     <div class="star-container">
-      <div class="star custom-icon" ng-repeat="i in [1,2,3,4,5] track by $index">
+      <div class="star custom-icon" ng-repeat="i in [1,2,3,4,5] track by $index"  ng-click="data.rating = $index">
         <i class="star-empty fa fa-star-o"></i>
         <i class="star-half fa fa-star-half-o"></i>
         <i class="star-filled fa fa-star"></i>
@@ -26,12 +27,11 @@ default                 - default theme
        <sg-wrapper-content/>
    </div>
 
-
 Styleguide 1.3
 */
 
 /*
-Star tzpes position test
+Star types position test
 
 All icons should lay exactly on top of each other.
 
