feat(changed color names): changed middle to ok

--- a/src/sc5-styleguide/elements.sc5.scss
+++ b/src/sc5-styleguide/elements.sc5.scss
@@ -102,7 +102,7 @@ The different star colors.
 
 .default           - Stars is colored default
 .positive          - Stars is colored positive
-.middle            - Stars is colored middle
+.ok            - Stars is colored ok
 .negative          - Stars is colored negative
 
 markup:
