--- a/src/sc5-styleguide/modifiers.sc5.scss
+++ b/src/sc5-styleguide/modifiers.sc5.scss
@@ -290,7 +290,7 @@ Overriding default colors of ratings to display the color independent of the rat
 default                  - No static color
 .color-default           - Stars are always colored default
 .color-positive          - Stars are always colored positive
-.color-ok            - Stars are always colored middle
+.color-ok            - Stars are always colored ok
 .color-negative          - Stars are always colored negative
 
 markup:
