--- a/src/scss/_modifiers.scss
+++ b/src/scss/_modifiers.scss
@@ -36,7 +36,7 @@ Rating Component
     }
   }
 
-  //Handling values > $maxNumOfStars up to $maxNumOfStars*2 (i know it's ugly)
+  //Handling values > $maxNumOfStars up to $maxNumOfStars*2 (i know it's ugly. Maybe i will skip this completely)
   @for $i from $maxNumOfStars through $maxNumOfStars*2 {
     &.value-#{$i} {
 
@@ -50,6 +50,124 @@ Rating Component
         }
       }
     }
+  }
+
+  /*Hover states
+  ====================================================*/
+
+  //- all stars before and the hover star should be filled
+  //- filled stars after the hover star should be empty
+
+  /*
+  PATTERN
+
+  //default style
+  .star-container {
+    .star:hover,
+    .star:hover ~ .star {  }
+  }
+
+  //hover style
+  .star-container {
+    .star { }
+    .star:hover ~ .star { }
+  }
+  */
+
+  &.hover:hover {
+    /*
+        //default style
+        .star-container {
+          .star:hover,
+          .star:hover ~ .star {
+            @extend .filled;
+          }
+        }
+
+        //hover style
+        .star-container {
+          .star {
+            //@extend .filled;
+            svg, i {
+              &.star-half,
+              &.star-empty {
+                opacity: 0 !important;
+              }
+              &.star-filled {
+                opacity: 1 !important;
+              }
+            }
+          }
+          .star:hover ~ .star {
+            //@extend .empty;
+            svg, i {
+              &.star-half,
+              &.star-filled {
+                opacity: 0 !important;
+              }
+              &.star-empty {
+                opacity: 1 !important;
+              }
+            }
+          }
+
+        }
+
+        @for $i from $minRatingValue through $maxNumOfStars {
+
+          //default style
+
+          //hover style
+          .star-container {
+            .star:nth-child(-n+#{$i}):nth-child(#{$i}):hover {
+              @if $i <= 2 {
+                background: red !important;
+              }
+            }
+
+            .star:nth-child(#{$i}):hover,
+            .star:nth-child(#{$i}):hover ~ .star {
+              @if $i <= 2 {
+                @extend .star.negative;
+              }
+
+              @if $i == 3 {
+                @extend .ok;
+              }
+
+              @if $i >= 4 {
+                @extend .positive;
+              }
+            }
+          }
+        }
+        */
+
+        @for $i from $minRatingValue through $maxNumOfStars {
+          &.hover-#{$i} {
+
+            .star-container {
+              .star:nth-child(-n+#{$i}) {
+                @extend .filled;
+              }
+
+              .star {
+                @if $i <= 2 {
+                  @extend .star.negative;
+                }
+
+                @if $i == 3 {
+                  @extend .ok;
+                }
+
+                @if $i >= 4 {
+                  @extend .positive;
+                }
+              }
+            }
+          }
+        }
+
   }
 
   /*Half stars
@@ -79,19 +197,16 @@ Rating Component
     }
   }
 
-
-
   /*Label Visible
   ====================================================*/
   &.label-hidden {
-    .label-value{
+    .label-value {
       display: none;
     }
   }
   &.label-visible {
     display: flex;
   }
-
 
   /*Label Position
   ====================================================*/
@@ -139,9 +254,9 @@ Rating Component
     }
   }
 
-/*
-Direction
-===================================================*/
+  /*
+  Direction
+  ===================================================*/
   &.direction-rtl {
     direction: rtl;
 
@@ -202,7 +317,7 @@ Direction
 
   /* Space
   ====================================================*/
-  &.space-no{
+  &.space-no {
     .star-container {
       @extend .star-container.space-no;
     }
